# pico-crm

./: .env.dev  .env.rustfs.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  tailwind.config.js
app/: Cargo.toml  README_FILE_UPLOAD_COMPONENTS.md
app/src/: components.rs  lazy_routes.rs  lib.rs  middlewares.rs  pages.rs  utils.rs
app/src/components/: contact_modal.rs  features.rs  mod.rs  navbar.rs  ui.rs
app/src/components/features/: admin.rs  contact.rs  contact_modal.rs  contact_modal1.rs  contacts_detail.rs  mod.rs  navbar.rs  schedules.rs  sidebar.rs  update_contact_modal.rs
app/src/components/layouts/: mod.rs  sidebar_layout.rs
app/src/components/ui/: date_picker.rs  drawer.rs  file_input.rs  form.rs  form1.rs  message_box.rs  mod.rs  modal.rs  pagination.rs  table.rs  toast.rs
app/src/layout/: sidebar_layout.rs
app/src/layouts/: sidebar_layout.rs
app/src/middlewares/: global_auth_middleware.rs
app/src/pages/: admin_login.rs  contacts_detail.rs  contacts_list.rs  contacts_management.rs  dashboard.rs  login.rs  mod.rs  not_found.rs  orders.rs  schedules.rs  service_catalogs.rs  service_requests.rs
app/src/pages/admin/: admin_users.rs  analytics.rs  merchants.rs  mod.rs  system_settings.rs  tenant_maintenance.rs
app/src/server/: admin_analytics_handlers.rs  admin_maintenance_handlers.rs  admin_merchant_handlers.rs  after_sales_handlers.rs  after_sales_record_handlers.rs  after_sales_rework_handlers.rs  contact_handlers.rs  file_handlers.rs  merchant_dashboard_handlers.rs  merchant_handlers.rs  mod.rs  order_handlers.rs  schedule_handlers.rs  service_catalog_handlers.rs  service_request_handlers.rs  system_config_handlers.rs  user_handlers.rs
app/src/utils/: api.rs  file_download.rs  file_upload.rs  mod.rs
backend/: Cargo.toml
backend/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
backend/src/application/: commands.rs  mappers.rs  queries.rs  utils.rs
backend/src/application/commands/: admin_auth.rs  admin_merchant_service.rs  admin_tenant_migration_service.rs  auth.rs  contact_service.rs  file_service.rs  merchant_auth.rs  merchant_service.rs  order_service.rs  schedule_service.rs  service_request_service.rs  system_config_service.rs  user_service.rs
backend/src/application/mappers/: contact_mapper.rs  merchant_mapper.rs  order_mapper.rs  service_request_mapper.rs  system_config_mapper.rs  user_mapper.rs
backend/src/application/queries/: analytics_service.rs  contact_service.rs  merchant_dashboard_service.rs  merchant_service.rs  order_service.rs  schedule_service.rs  service_request_service.rs  system_config_service.rs  user_service.rs
backend/src/application/services/: contact_service.rs  mod.rs  new_contact_service.rs
backend/src/domain/: auth.rs  models.rs  queries.rs  repositories.rs  specifications.rs
backend/src/domain/auth/: claims.rs  provider.rs
backend/src/domain/crm/: mod.rs
backend/src/domain/errors/: pagination.rs  validation.rs
backend/src/domain/gateways/: file_storage.rs
backend/src/domain/models/: audit_log.rs  contact.rs  contacts.rs  file.rs  (+7 more)
backend/src/entity/: mod.rs  prelude.rs  users.rs
backend/src/infrastructure/: config.rs  db.rs  gateways.rs  mappers.rs  mod.rs  queries.rs  repositories.rs  tenant.rs  utils.rs
backend/src/models/: contacts.rs
backend/src/operations/: contacts.rs
(+342 files in other folders)
