[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
reactive_stores.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "BlobPropertyBag",
    "Window",
    "Document",
    "console",
] }
backend = { path = "../backend", optional = true }
shared = { path = "../shared" }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "backend",
]
