[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, default-features = false }
leptos_meta.workspace = true
leptos_router.workspace = true
axum = {workspace = true, optional = true}
leptos_axum = { workspace = true, optional = true }

cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "BlobPropertyBag",
    "Window",
    "Document",
    "console",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "DataTransfer",
] }
backend = { path = "../backend", optional = true }
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono.workspace = true
cookie.workspace = true
http.workspace = true
uuid.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "backend",
]
