[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
migration = { path = "../migration" }
dotenvy.workspace = true
sea-orm.workspace = true
chrono.workspace = true
rust_xlsxwriter.workspace = true
rand.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
disintegrate = { version = "4.0.0", features = ["macros", "serde-json"] }
disintegrate-postgres = { version = "4.0.0", features = ["listener"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }

[dev-dependencies]
zip = "4.2.0"
